# PolyBawt

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGES_REVOKED.md  CODEX_REVIEW_REQUEST.md  CODE_REVIEW_REQUEST.md  EMERGENCY_SHUTDOWN.md  EVENT_STRATEGY_README.md  INSTITUTIONAL_REVIEW_PROMPT.md  README.md  SENIOR_CODE_REVIEW.md  STATUS.txt  UPGRADE_PLAN.md  check_markets.py  claude.md  debug_markets.py  manage_approvals.py  openclaw.json  pyproject.toml  requirements.txt  test_orderbook.py  test_place_bets.py  verify_connection.py  verify_live_ready.py
.github/workflows/: ci.yml
config/: emergency_stop.yaml  event_trading.yaml  example.yaml  live.yaml  live_degen.yaml  paper.yaml
research/: chat.md  gemeni.md  kimi.md  perplex.md
src/: __init__.py  main.py
src/analytics/: __init__.py  fill_quality.py  latency_slo.py
src/api/: server.py  state.py
src/backtesting/: __init__.py  engine.py
src/calibration/: __init__.py  brier_tracker.py  calibration_database.py  walk_forward_validator.py
src/core/: __init__.py  event_bus.py  idempotency.py
src/execution/: __init__.py  balance.py  clob_client.py  order_manager.py  order_persistence.py  rate_limiter.py  reconciler.py
src/infrastructure/: __init__.py  alerts.py  circuit_breaker.py  config.py  events.py  graceful_shutdown.py  kill_switch.py  logging.py  metrics.py  research_recorder.py  ws_health.py
src/ingestion/: __init__.py  event_market_discovery.py  event_normalization.py  gamma_models.py  market_discovery.py  oracle_feed.py  (+4 more)
web-client/: DASHBOARD.md  package-lock.json  package.json
(+109 files in other folders)
